# repo-mapping

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  create_wheels.py  pkg_tester.py  repo_mapping_pkg0-1.0-py3-none-any.whl  repo_mapping_pkg1-1.0-py3-none-any.whl  repo_mapping_pkg10-1.0-py3-none-any.whl  repo_mapping_pkg11-1.0-py3-none-any.whl  repo_mapping_pkg12-1.0-py3-none-any.whl  repo_mapping_pkg13-1.0-py3-none-any.whl  repo_mapping_pkg14-1.0-py3-none-any.whl  repo_mapping_pkg15-1.0-py3-none-any.whl  repo_mapping_pkg16-1.0-py3-none-any.whl  repo_mapping_pkg17-1.0-py3-none-any.whl  repo_mapping_pkg18-1.0-py3-none-any.whl  repo_mapping_pkg19-1.0-py3-none-any.whl  repo_mapping_pkg2-1.0-py3-none-any.whl  repo_mapping_pkg20-1.0-py3-none-any.whl  repo_mapping_pkg21-1.0-py3-none-any.whl  repo_mapping_pkg22-1.0-py3-none-any.whl  repo_mapping_pkg23-1.0-py3-none-any.whl  repo_mapping_pkg24-1.0-py3-none-any.whl  repo_mapping_pkg25-1.0-py3-none-any.whl  repo_mapping_pkg26-1.0-py3-none-any.whl  repo_mapping_pkg27-1.0-py3-none-any.whl  repo_mapping_pkg28-1.0-py3-none-any.whl  repo_mapping_pkg29-1.0-py3-none-any.whl  repo_mapping_pkg3-1.0-py3-none-any.whl  repo_mapping_pkg30-1.0-py3-none-any.whl  repo_mapping_pkg31-1.0-py3-none-any.whl  repo_mapping_pkg4-1.0-py3-none-any.whl  repo_mapping_pkg5-1.0-py3-none-any.whl  repo_mapping_pkg6-1.0-py3-none-any.whl  repo_mapping_pkg7-1.0-py3-none-any.whl  repo_mapping_pkg8-1.0-py3-none-any.whl  repo_mapping_pkg9-1.0-py3-none-any.whl  requirements.in  requirements.txt  (+1 more)
tools/: bazel
